<resources>

    <string name="app_name">MyContact</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_my_contact">MyContact</string>

    <string-array name="select_list">
        <item>１</item>
        <item>２</item>
        <item>３</item>
    </string-array>

    <string name="data_name">名前</string>
    <string name="data_address">住所</string>
    <string name="data_tel">電話</string>
    <string name="data_url">URL</string>
    <string name="data_gender">性別</string>
    <string name="data_blood">血液型</string>
    <string name="def_name">デジタルプライム</string>
    <string name="def_address">東京都中央区銀座</string>
    <string name="def_tel">0312345678</string>
    <string name="def_url">http://www.digitalprime.co.jp</string>
    <string name="val_man">男性</string>
    <string name="val_woman">女性</string>
    <string name="val_etc">その他</string>

    <string-array name="val_blood">
        <item>O型</item>
        <item>A型</item>
        <item>B型</item>
        <item>AB型</item>
        <item>その他</item>
    </string-array>

    <string name="button_save">登録</string>
    <string name="button_newsave">新規登録</string>
    <string name="button_disp">表示</string>
    <string name="button_map">地図</string>
    <string name="button_tel">電話</string>
    <string name="button_web">ブラウザ</string>
    <string name="button_del">削除</string>
    <string name="button_finish">終了</string>

</resources>